update for angular cms

--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -4,8 +4,12 @@
 
 
 
+<div class="buttons">
 <button class="btn btn-primary" routerLink="/register">Go to register page</button>
+<button class="btn btn-primary" routerLink="/forum">Go to forum page</button>
+<button class="btn btn-primary" routerLink="/login">Go to login page</button>
 
+</div>
 
   <i class="fa fa-gears"  aria-hidden="true"></i>
   
