--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -14,8 +14,6 @@
   <i class="fa fa-gears"  aria-hidden="true"></i>
   
 
-  <ul>
-    <li *ngFor="let item of items | async">
-      {{ item.name }}
-    </li>
-  </ul>
+<div>
+  Welcome, {{ user.name }} ( {{ user.uid }})
+</div>
