--- a/src/app/page/forum/post-list/post-list.html
+++ b/src/app/page/forum/post-list/post-list.html
@@ -4,7 +4,7 @@
 <div *ngFor="let post of posts; let i = index ">
   <div class="subject">
     {{ post.subject }}
-    <button (click)=" onClickPostEdit( post ) ">EDIT</button>
+    <button id="post-edit-{{ post.key }}" (click)=" onClickPostEdit( post ) ">EDIT</button>
   </div>
   <div>
     <b>{{ post.name }}</b>
@@ -12,4 +12,5 @@
   </div>
   <div class="content" style="padding: 1em; background-color: #efefef;">{{ post.content }}</div>
 </div>
+
 
