update for refacor

--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -1,6 +1,6 @@
-<p>
-  home works!
-</p>
+<h1>Home</h1>
+
+
 
 
 
@@ -16,4 +16,10 @@
 
 <div>
   Welcome, {{ user.name }} ( {{ user.uid }})
+</div>
+
+<div>
+  Device Info:
+  Model: {{ device.model }}
+  Version: {{ device.version }}
 </div>
