--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,5 @@
 @import './styles/layout.scss';
 @import './styles/module.scss';
 
-@import './app/page/home/home.scss';
-@import './app/page/register/register.scss';
+@import './pages/home/home.scss';
+@import './pages/register/register.scss';
