update for profile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,4 @@
 @import './styles/module.scss';
 
 @import './pages/home/home.scss';
-@import './pages/register/register.scss';
+@import './pages/profile/profile.scss';
