update for comments. nesting comments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,7 @@
 
 @import './pages/home/home.scss';
 @import './pages/profile/profile.scss';
+
+@import './pages/forum/post-list/post-list.scss';
+@import './pages/forum/comment-list/comment-list.scss';
+
