update for forum. comemnt. nesting. categorizing.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,5 @@
 
 @import './pages/forum/post-list/post-list.scss';
 @import './pages/forum/comment-list/comment-list.scss';
+@import './pages/forum/comment-view/comment-view.scss';
 
