update for front end

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,12 @@
 @import './styles/layout.scss';
 @import './styles/module.scss';
 
-@import './pages/home/home.scss';
-@import './pages/profile/profile.scss';
+@import './app/home/home.scss';
+
+
+
+
+@import './app/user/pages/profile/profile.scss';
 
 @import './pages/forum/post-list/post-list.scss';
 @import './pages/forum/comment-list/comment-list.scss';
